Addition/change of several  APIs for manipulating containers, casting, etc.
git-svn-id: https://gama-platform.googlecode.com/svn/branches/GAMA_CURRENT@11999 b91ef52e-2b48-11df-9ab6-b1cdc0d4a89a